# day_one_test_framework

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.integration  Dockerfile.test-runner  Jenkinsfile  README.md  conftest.py  docker-compose.local.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  start_mock_mode.py
config/: env.yaml  integration.yaml  local.yaml  mock-gcp-credentials.json  nginx-mock-api.conf  policies.json  production.yaml  prometheus.yml  redis.conf  staging.yaml
day_one_framework.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: CI_CD_INTEGRATION_GUIDE.md  FRAMEWORK_COMPLETION_SUMMARY.md  IMPLEMENTATION_STATUS.md  INTEGRATION_ENV_GUIDE.md  MONITORING_AND_REPORTS_GUIDE.md  MONITORING_QUICK_START.md  PERFORMANCE_TESTING_GUIDE.md  PRODUCTION_IMPLEMENTATION_SUMMARY.md  PROD_ENV_GUIDE.md  REPORTING.md  TEST_MONITORING_MONGODB.md  TROUBLESHOOTING.md  TUTORIAL.md  architecture.md  dlp_testing.md  environment_setup.md  implementation_guide.md  integration_environment_guide.md  production_environment_guide.md  requirements.md  security_testing_guide.md  staging_environment_guide.md  testing_strategy.md
k8s/: K8s-changelog.md
reports/: junit.xml  test_report.html
scripts/: analyze_test_metrics.py  check_complexity.py  check_coverage.py  check_documentation.py  check_flaky_threshold.py  clean_reports.py  create_pr.sh  deploy_integration.py  deploy_production.py  deploy_staging.py  detect_flaky_tests.py  generate_quality_summary.py  localstack-init.sh  mongo-init.js  query_test_results.py  (+3 more)
(+86 files in other folders)
