[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--color=yes",
    "--html=reports/test_report.html",
    "--self-contained-html",
]

markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (requires services)",
    "e2e: End-to-end tests (full workflow)",
    "performance: Performance and load tests",
    "security: Security-focused tests",
    "smoke: Quick smoke tests",
    "slow: Tests that take a long time to run",
    "load: Load testing tests",
    "staging: Staging environment tests",
]

timeout = 300

[project]
dependencies = [
    "pytest",
    "pytest-html",
    "pytest-cov",
    "pytest-xdist",
    "pytest-timeout",
    "pytest-mock",
    "requests",
    "kafka-python",
    "pymongo",
    "redis",
    "boto3",
    "pyyaml",
    "prometheus-client",
]
